test/classes/initializers/super-in-phase2.good
super-in-phase2.chpl:5: In initializer:
super-in-phase2.chpl:7: error: use of super.init() call in phase 2
